--- a/src/footer.css
+++ b/src/footer.css
@@ -77,6 +77,7 @@ body > .debuginfo {
     width: 100%;
     background: transparent;
     margin-top: -50px;
+    padding: 0;
     height: 10px;
 }
 body > .debuginfo,
